client/css/widgets/card.css
.card {
  overflow: hidden;
  color: black;
}

.card > .cardFace {
  display: none;
}

.card > .active.cardFace {
  display: block;
  overflow: hidden;
  width: 100%;
  height: 100%;
  position: absolute;
  box-sizing: border-box;
}

.card > .cardFace > .cardFaceObject {
  position: absolute;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center center;
  box-sizing: border-box;
}

